create method to save in family_member_db every family member

--- a/FamilyApp/src/main/resources/application.yml
+++ b/FamilyApp/src/main/resources/application.yml
@@ -14,5 +14,5 @@ spring:
       ddl-auto: validate
 
 FAMILY_MEMBER_URL: ${FAMILY_MEMBER_URL}
-CREATE_FAMILY_MEMBER_URL: 'createfamilymember'
-RETURN_FAMILY_MEMBER_URL: 'getfamilymembers'
+CREATE_FAMILY_MEMBER_URL: ${CREATE_FAMILY_MEMBER_URL}
+RETURN_FAMILY_MEMBER_URL: ${RETURN_FAMILY_MEMBERS_URL}
