--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,6 +20,8 @@ services:
   family-app:
     environment:
       - FAMILY_MEMBER_URL=http://family-member-app:8000/
+      - CREATE_FAMILY_MEMBER_URL= createfamilymember
+      - RETURN_FAMILY_MEMBERS_URL= getfamilymembers
     restart: on-failure
     build:
       context: ./FamilyApp
