--- a/FamilyApp/src/main/resources/application.yml
+++ b/FamilyApp/src/main/resources/application.yml
@@ -1,18 +1,26 @@
 spring:
   flyway:
-    user: 'postgres'
-    password: 'password'
-    url: 'jdbc:postgresql://postgres:5432/postgres'
+    user: ${POSTGRES_USER}
+    password: ${POSTGRES_PASSWORD}
+    url: ${POSTGRES_DATABASE_URL}
     baseline-on-migrate: true
   datasource:
-    url: 'jdbc:postgresql://postgres:5432/postgres'
-    username: 'postgres'
-    password: 'password'
+    url: ${POSTGRES_DATABASE_URL}
+    username: ${POSTGRES_USER}
+    password: ${POSTGRES_PASSWORD}
     driver-class-name: 'org.postgresql.Driver'
   jpa:
     hibernate:
       ddl-auto: validate
 
-FAMILY_MEMBER_URL: ${FAMILY_MEMBER_URL}
-CREATE_FAMILY_MEMBER_URL: ${CREATE_FAMILY_MEMBER_URL}
-RETURN_FAMILY_MEMBER_URL: ${RETURN_FAMILY_MEMBERS_URL}
+FAMILY:
+  MEMBER:
+    URL: ${FAMILY_MEMBER_URL}
+CREATE:
+  FAMILY:
+    MEMBER:
+      URL: ${CREATE_FAMILY_MEMBER_URL}
+RETURN:
+  FAMILY:
+    MEMBER:
+      URL: ${RETURN_FAMILY_MEMBERS_URL}
