--- a/FamilyMemberApp/src/main/resources/application.yml
+++ b/FamilyMemberApp/src/main/resources/application.yml
@@ -1,13 +1,13 @@
 spring:
   flyway:
-    user: 'postgres'
-    password: 'password'
-    url: 'jdbc:postgresql://postgres:5432/postgres'
+    user: ${POSTGRES_USER}
+    password: ${POSTGRES_PASSWORD}
+    url: ${POSTGRES_DATABASE_URL}
     baseline-on-migrate: true
   datasource:
-    url: 'jdbc:postgresql://postgres:5432/postgres'
-    username: 'postgres'
-    password: 'password'
+    url: ${POSTGRES_DATABASE_URL}
+    username: ${POSTGRES_USER}
+    password: ${POSTGRES_PASSWORD}
     driver-class-name: 'org.postgresql.Driver'
   jpa:
     hibernate:
