fix testing method

--- a/FamilyApp/src/main/resources/application.yml
+++ b/FamilyApp/src/main/resources/application.yml
@@ -12,6 +12,7 @@ spring:
   jpa:
     hibernate:
       ddl-auto: validate
+    database-platform: org.hibernate.dialect.PostgreSQLDialect
 
 family:
   member:
