--- a/FamilyApp/pom.xml
+++ b/FamilyApp/pom.xml
@@ -41,7 +41,12 @@
 			<artifactId>postgresql</artifactId>
 			<scope>runtime</scope>
 		</dependency>
-		<!-- https://mvnrepository.com/artifact/junit/junit -->
+		<dependency>
+			<groupId>org.testcontainers</groupId>
+			<artifactId>junit-jupiter</artifactId>
+			<version>1.17.6</version>
+			<scope>test</scope>
+		</dependency>
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
@@ -54,7 +59,6 @@
 			<version>1.17.6</version>
 			<scope>test</scope>
 		</dependency>
-
 	</dependencies>
 
 	<build>
